# ShadowBids-Arcium

./: .env.example  .gitignore  Anchor.toml  Arcium.toml  README.md  WALKTHROUGH.md  devnet-wallet.json  package-lock.json  package.json  skills-lock.json  tsconfig.json
app/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
artifacts/: arcium_clock.json  arcium_fee_pool.json  arx_ata_6yjF_6i5L.json  arx_ata_8YxR_z8Vz.json  arx_ata_FxK5_4J4K.json  arx_mint.json  arx_node_6yjF_6i5L.json  arx_node_FxK5_4J4K.json  ata_recovery_peer_0.json  ata_recovery_peer_1.json  ata_recovery_peer_2.json  ata_recovery_peer_3.json  ata_recovery_peer_4.json  ata_recovery_peer_5.json  ata_recovery_peer_6.json  ata_recovery_peer_7.json  circuits_hash.txt  cluster_acc_0.json  compute_winner_raw_circuit_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  mempool_acc.json  mxe_acc.json  mxe_key_recovery_init_comp.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  mxe_lut_acc.json  node_config_0.toml  node_config_1.toml  operator_acc_6yjF_6i5L.json  operator_acc_FxK5_4J4K.json  recovery_cluster_acc.json  recovery_node_config_0.toml  recovery_node_config_1.toml  recovery_node_config_2.toml  recovery_node_config_3.toml  recovery_node_config_4.toml  recovery_node_config_5.toml  recovery_node_config_6.toml  recovery_node_config_7.toml  (+22 more)
programs/shadow_bid/: Cargo.toml
programs/shadow_bid/src/: constants.rs  error.rs  lib.rs
programs/shadow_bid/src/instructions/: auction.rs  compute_winner.rs  mod.rs
programs/shadow_bid/src/state/: mod.rs
(+76 files in other folders)
