[package]
name = "shadow_bid"
version = "0.1.0"
description = "ShadowBid Arcium-native sealed-bid auction program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_bid"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
default = []

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "=0.10.1" }
arcium-macros = "=0.10.1"
arcium-anchor = "=0.10.1"
unicode-segmentation = { version = "=1.12.0" }
hashbrown = { version = "=0.16.1" }
indexmap = { version = "=2.13.1" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
